Much faster, with bitvec

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 authors = ["Isaac Grosof <isaacbg227@gmail.com>"]
 
 [dependencies]
+cpuprofiler = "0.0.3"
+bit-vec = "0.4.4"
 
 [profile.release]
 debug = true
